--- a/Machine_Learning_Models_MSE_Comparison.Rmd
+++ b/Machine_Learning_Models_MSE_Comparison.Rmd
@@ -2,7 +2,7 @@
 title: "MLModels"
 author: "April Sang"
 date: "16/06/2019"
-output: rmarkdown::github_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -92,7 +92,7 @@ mse
 #MSE: 0.424354
 ```
 ##### -
-##### ridge regression
+##### Ridge regression
 ```{r}
 rrsim_d <- cv.glmnet(x, y, alpha=0)
 plot(rrsim_d$glmnet.fit, label=TRUE, xvar="lambda")
@@ -102,11 +102,6 @@ mse_r
 #MSE: 0.4241866
 ```
 
-```{r}
-winebag <- randomForest(quality~., data=winequality,mtry=11,importance=TRUE)
-winebag
-#MSE:0.3168
-```
 ```
 Out of all the mothods I ran, bagging seems to be the one has the lowest MSE in the long run. 
 For presenting to the company, I would choose lasso because it is easier to expalin to people who do not have too much knowledge on stats, and the MSE of it is not way to high either. 
